[package]
name = "poker-project-rustaceans"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
strum = "0.26.3"
strum_macros = "0.26.4"
test-context = "*"
serde = "1.0.188"
serde_json = "1"
bson = {version = "2.13.0", features = ["uuid-1"]}
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
warp = "0.3.7"

[dependencies.mongodb]
version = "3.2.1"

[dependencies.uuid]
version = "1.12.1"
features = [
    "v7",                # Lets you generate random UUIDs
    "std",
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]
